--- a/.github/workflows/enrich.yml
+++ b/.github/workflows/enrich.yml
@@ -1,4 +1,4 @@
-name: Manual Enrichment
+name: Enrich List
 
 on:
   workflow_dispatch:
@@ -6,10 +6,8 @@ on:
 jobs:
   enrich:
     runs-on: ubuntu-latest
-    
     permissions:
       contents: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,8 +18,7 @@ jobs:
           go-version: '1.24'
 
       - name: Install awelist
-        run: |
-          go install github.com/0xmzn/awelist/cmd/awelist@refactor
+        run: go install github.com/0xmzn/awelist/cmd/awelist@refactor
         env:
           GOPROXY: direct
 
@@ -30,12 +27,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-      
-      - name: Generate Readme
-        run: awelist generate -o README.md readme.template
 
-      - name: Commit and Push changes
+      - name: Commit awesome-lock.json
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "chore: update awesome-lock.json and README.md [skip ci]"
-          file_pattern: 'awesome-lock.json README.md'
+          commit_message: "chore: update awesome-lock.json [skip ci]"
+          file_pattern: 'awesome-lock.json'
