--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -5,14 +5,22 @@ on:
     workflows: ["Enrich List"]
     types:
       - completed
+  
+  push:
+    paths:
+      - 'awesome-lock.json'
+      - 'readme.template'
+  
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') }}
+    
     permissions:
       contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -25,7 +33,8 @@ jobs:
           go-version: '1.24'
 
       - name: Install awelist
-        run: go install github.com/0xmzn/awelist/cmd/awelist@refactor
+        run: |
+          go install github.com/0xmzn/awelist/cmd/awelist@refactor
         env:
           GOPROXY: direct
 
