--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install awelist
         run: |
-          go install github.com/0xmzn/awelist/cmd/awelist@refactor
+          go install github.com/0xmzn/awelist@latest
         env:
           GOPROXY: direct
 
